good night commit

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,18 +23,18 @@
       <img src="../RES/FullLogo.png" alt="headerlogo" />
       <nav>
         <ul>
-          <a href="">About Us</a>
-          <a href="">Career</a>
-          <a href="">Departments</a>
+          <a id="Aboutus" href="">About Us</a>
+          <a id="Career" href="./career.html">Career</a>
+          <a id="Departments" href="">Departments</a>
         </ul>
       </nav>
     </header>
-    <section class="section.one">
+    <section class="sect1">
       <img src="../RES/logo.png" alt="logo" />
-      <p class="section.oneHeading">
+      <p class="sect1Heading">
         Making the healthcare experience more human
       </p>
-      <div class="section.oneText">
+      <div class="sect1Text">
         <p>
           We want patients to find the perfect doctor and book an appointment in
           the most easy way. The patient journey should be enjoyable, and that's
@@ -48,7 +48,6 @@
           their time to what really matters: their patients.
         </p>
       </div>
-      p
     </section>
     <section class="section.one">
       <div class="for.container">
