finished section two

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,12 +29,12 @@
         </ul>
       </nav>
     </header>
-    <section class="sect1">
+    <section id="first_section">
       <img src="../RES/logo.png" alt="logo" />
-      <p class="sect1Heading">
+      <p id="first_sectionHeading">
         Making the healthcare experience more human
       </p>
-      <div class="sect1Text">
+      <div id="first_sectionText">
         <p>
           We want patients to find the perfect doctor and book an appointment in
           the most easy way. The patient journey should be enjoyable, and that's
@@ -49,48 +49,46 @@
         </p>
       </div>
     </section>
-    <section class="section.one">
-      <div class="for.container">
-        <div class="for.patients">
+    <section class="second_section">
+        <div id="for_patients">
           <img src="../RES/icon-patients.svg" alt="patients icon" />
           <h6>For patients</h6>
           <p>Find a doctor, book a visit and solve any health-related doubt</p>
           <select name="choose.country" id="choose.country">
-            <option value="Choose country"></option>
-            <option value="Nigeria"></option>
-            <option value="Slovenia"></option>
-            <option value="Madagascar"></option>
+            <option value="">Choose country</option>
+            <option value="">Nigeria</option>
+            <option value="">Slovenia</option>
+            <option value="">Madagascar</option>
           </select>
         </div>
-        <div class="for.doctors">
+        <div class="for_doctors">
           <img src="../RES/icon-doctors.svg" alt="doctor icon" />
           <h6>For doctors</h6>
           <p>Find a doctor, book a visit and solve any health-related doubt</p>
           <select name="choose.country" id="choose.country">
-            <option value="Choose country"></option>
-            <option value="Nigeria"></option>
-            <option value="Slovenia"></option>
-            <option value="Madagascar"></option>
+            <option value="">Choose country</option>
+            <option value="">Nigeria</option>
+            <option value="">Slovenia</option>
+            <option value="">Madagascar</option>
           </select>
         </div>
-        <div class="for.clinics">
+        <div class="for_clinics">
           <img src="../RES/icon-clinics.svg" alt="" />
           <h6>For clinics</h6>
           <p>Deliver an exceptional patient experience in your clinic</p>
           <select name="2 to 20 specialists" id="2plus.specialists">
-            <option value="Choose country"></option>
-            <option value="Nigeria"></option>
-            <option value="Slovenia"></option>
-            <option value="Madagascar"></option>
+            <option value="">2 to 20 specialists</option>
+            <option value="">Nigeria</option>
+            <option value="">Slovenia</option>
+            <option value="">Madagascar</option>
           </select>
           <select name="More than 20 specialists" id="20plus.specialists">
-            <option value="Choose country"></option>
-            <option value="Tokyo"></option>
-            <option value="Vienna"></option>
-            <option value="Madagascar"></option>
+            <option value="">More than 20 specialists</option>
+            <option value="">Tokyo</option>
+            <option value="">Vienna</option>
+            <option value="">Madagascar</option>
           </select>
         </div>
-      </div>
     </section>
     <section class="section.two">
       <div class="logos.containerText">
