--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </select>
         </div>
     </section>
-    <section class="section.two">
+    <section class="third_section">
       <div class="logos.containerText">
         <p>We are a global</p>
         <p>company</p>
@@ -109,7 +109,7 @@
         <img src="../RES/logo-feegow.svg" alt="" />
       </div>
     </section>
-    <section class="section.three">
+    <section class="fourth_section">
       <h6>The world's biggest</h6>
       <h6>healthcare platform</h6>
       <p>We work from 9 offices all over the world, bringing Docplanner</p>
@@ -138,7 +138,7 @@
         <p>trust our solutions</p>
       </div>
     </section>
-    <section class="section.four">
+    <section class="fifth_section">
       <h6>Improve the lives of millions.</h6>
       <h6>Change yours forever.</h6>
       <p>More than 2800 team mates share our same vision, goals and passion.</p>
@@ -147,7 +147,7 @@
       </p>
       <p>Mexico City and Curitiba, our search for great talent never stops.</p>
     </section>
-    <section class="section.five">
+    <section class="sixth_section">
       <div class="locations">
         <div class="location.tiles"></div>
       </div>
