fixing html links

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-<link rel="stylesheet" href="../CSS/styles.css">
+<link rel="stylesheet" href="./CSS/styles.css">
   </head>
   <body>
     <header>
-      <img src="../RES/FullLogo.png" alt="headerlogo" />
+      <img src="./RES/FullLogo.png" alt="headerlogo" />
       <nav>
         <ul>
           <a id="Aboutus" href="">About Us</a>
-          <a id="Career" href="./career.html">Career</a>
+          <a id="Career" href="">Career</a>
           <a id="Departments" href="">Departments</a>
         </ul>
       </nav>
     </header>
     <section id="first_section">
-      <img src="../RES/logo.png" alt="logo" />
+      <img src="./RES/logo.png" alt="logo" />
       <p id="first_sectionHeading">
         Making the healthcare experience more human
       </p>
@@ -51,7 +51,7 @@
     </section>
     <section class="second_section">
         <div id="for_patients">
-          <img src="../RES/icon-patients.svg" alt="patients icon" />
+          <img src="./RES/icon-patients.svg" alt="patients icon" />
           <h6>For patients</h6>
           <p>Find a doctor, book a visit and solve any health-related doubt</p>
           <select name="choose.country" id="choose.country">
@@ -62,7 +62,7 @@
           </select>
         </div>
         <div class="for_doctors">
-          <img src="../RES/icon-doctors.svg" alt="doctor icon" />
+          <img src="./RES/icon-doctors.svg" alt="doctor icon" />
           <h6>For doctors</h6>
           <p>Find a doctor, book a visit and solve any health-related doubt</p>
           <select name="choose.country" id="choose.country">
@@ -73,7 +73,7 @@
           </select>
         </div>
         <div class="for_clinics">
-          <img src="../RES/icon-clinics.svg" alt="" />
+          <img src="./RES/icon-clinics.svg" alt="" />
           <h6>For clinics</h6>
           <p>Deliver an exceptional patient experience in your clinic</p>
           <select name="2 to 20 specialists" id="2plus.specialists">
@@ -97,16 +97,16 @@
         <p>with local culture</p>
       </div>
       <div class="logos">
-        <img src="../RES/znanylekarz.png" alt="" />
-        <img src="../RES/Doctoralia.png" alt="" />
-        <img src="../RES/MioDottore.png" alt="" />
-        <img src="../RES/doktortakvimi.png" alt="" />
-        <img src="../RES/Znamylekar.jpg" alt="" />
-        <img src="../RES/logo-jameda.svg" alt="" />
-        <img src="../RES/logo-tuotempo.svg" alt="" />
-        <img src="../RES/logo-gipo-primary.svg" alt="" />
-        <img src="../RES/logo-clinicloud.svg" alt="" />
-        <img src="../RES/logo-feegow.svg" alt="" />
+        <img src="./RES/znanylekarz.png" alt="" />
+        <img src="./RES/Doctoralia.png" alt="" />
+        <img src="./RES/MioDottore.png" alt="" />
+        <img src="./RES/doktortakvimi.png" alt="" />
+        <img src="./RES/Znamylekar.jpg" alt="" />
+        <img src="./RES/logo-jameda.svg" alt="" />
+        <img src="./RES/logo-tuotempo.svg" alt="" />
+        <img src="./RES/logo-gipo-primary.svg" alt="" />
+        <img src="./RES/logo-clinicloud.svg" alt="" />
+        <img src="./RES/logo-feegow.svg" alt="" />
       </div>
     </section>
     <section class="fourth_section">
@@ -114,9 +114,9 @@
       <h6>healthcare platform</h6>
       <p>We work from 9 offices all over the world, bringing Docplanner</p>
       <p>Group to life in 13 countries.</p>
-      <img src="../RES/logocropped.png" alt="" />
+      <img src="./RES/logocropped.png" alt="" />
       <div class="country.leader">
-        <img src="../RES/flag.png" alt="" />
+        <img src="./RES/flag.png" alt="" />
         <h6>Leader in 13 countries</h6>
         <p>
           Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech
@@ -124,7 +124,7 @@
         </p>
       </div>
       <div class="appointments">
-        <img src="../RES/visits.png" alt="" />
+        <img src="./RES/visits.png" alt="" />
         <h6>15,000,000 appointments</h6>
         <p>booked last month</p>
       </div>
@@ -133,7 +133,7 @@
         <p>visit our websites each month</p>
       </div>
       <div class="doctors">
-        <img src="../RES/doctors.png" alt="" />
+        <img src="./RES/doctors.png" alt="" />
         <h6>210,000 active doctors</h6>
         <p>trust our solutions</p>
       </div>
