--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-<link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
     <header>
@@ -50,45 +50,45 @@
       </div>
     </section>
     <section class="second_section">
-        <div id="for_patients">
-          <img src="./RES/icon-patients.svg" alt="patients icon" />
-          <h6>For patients</h6>
-          <p>Find a doctor, book a visit and solve any health-related doubt</p>
-          <select name="choose.country" id="choose.country">
-            <option value="">Choose country</option>
-            <option value="">Nigeria</option>
-            <option value="">Slovenia</option>
-            <option value="">Madagascar</option>
-          </select>
-        </div>
-        <div class="for_doctors">
-          <img src="./RES/icon-doctors.svg" alt="doctor icon" />
-          <h6>For doctors</h6>
-          <p>Find a doctor, book a visit and solve any health-related doubt</p>
-          <select name="choose.country" id="choose.country">
-            <option value="">Choose country</option>
-            <option value="">Nigeria</option>
-            <option value="">Slovenia</option>
-            <option value="">Madagascar</option>
-          </select>
-        </div>
-        <div class="for_clinics">
-          <img src="./RES/icon-clinics.svg" alt="" />
-          <h6>For clinics</h6>
-          <p>Deliver an exceptional patient experience in your clinic</p>
-          <select name="2 to 20 specialists" id="2plus.specialists">
-            <option value="">2 to 20 specialists</option>
-            <option value="">Nigeria</option>
-            <option value="">Slovenia</option>
-            <option value="">Madagascar</option>
-          </select>
-          <select name="More than 20 specialists" id="20plus.specialists">
-            <option value="">More than 20 specialists</option>
-            <option value="">Tokyo</option>
-            <option value="">Vienna</option>
-            <option value="">Madagascar</option>
-          </select>
-        </div>
+      <div id="for_patients">
+        <img src="./RES/icon-patients.svg" alt="patients icon" />
+        <h6>For patients</h6>
+        <p>Find a doctor, book a visit and solve any health-related doubt</p>
+        <select name="choose.country" id="choose.country">
+          <option value="">Choose country</option>
+          <option value="">Nigeria</option>
+          <option value="">Slovenia</option>
+          <option value="">Madagascar</option>
+        </select>
+      </div>
+      <div class="for_doctors">
+        <img src="./RES/icon-doctors.svg" alt="doctor icon" />
+        <h6>For doctors</h6>
+        <p>Find a doctor, book a visit and solve any health-related doubt</p>
+        <select name="choose.country" id="choose.country">
+          <option value="">Choose country</option>
+          <option value="">Nigeria</option>
+          <option value="">Slovenia</option>
+          <option value="">Madagascar</option>
+        </select>
+      </div>
+      <div class="for_clinics">
+        <img src="./RES/icon-clinics.svg" alt="" />
+        <h6>For clinics</h6>
+        <p>Deliver an exceptional patient experience in your clinic</p>
+        <select name="2 to 20 specialists" id="2plus.specialists">
+          <option value="">2 to 20 specialists</option>
+          <option value="">Nigeria</option>
+          <option value="">Slovenia</option>
+          <option value="">Madagascar</option>
+        </select>
+        <select name="More than 20 specialists" id="20plus.specialists">
+          <option value="">More than 20 specialists</option>
+          <option value="">Tokyo</option>
+          <option value="">Vienna</option>
+          <option value="">Madagascar</option>
+        </select>
+      </div>
     </section>
     <section class="third_section">
       <div class="logos.containerText">
@@ -110,32 +110,39 @@
       </div>
     </section>
     <section class="fourth_section">
-      <h6>The world's biggest</h6>
-      <h6>healthcare platform</h6>
-      <p>We work from 9 offices all over the world, bringing Docplanner</p>
-      <p>Group to life in 13 countries.</p>
-      <img src="./RES/logocropped.png" alt="" />
-      <div class="country.leader">
-        <img src="./RES/flag.png" alt="" />
-        <h6>Leader in 13 countries</h6>
-        <p>
-          Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech
-          Republic, Portugal, Argentina, Peru and Chile
-        </p>
+      <div class="fourth_sectionTextnLogo">
+        <h6>The world's biggest</h6>
+        <h6>healthcare platform</h6>
+        <p>We work from 9 offices all over the world, bringing Docplanner</p>
+        <p>Group to life in 13 countries.</p>
+        <img src="./RES/logocropped.png" alt="" />
       </div>
-      <div class="appointments">
-        <img src="./RES/visits.png" alt="" />
-        <h6>15,000,000 appointments</h6>
-        <p>booked last month</p>
+      <div class="fourth_sectionTwoTiles1">
+        <div class="country_leader">
+          <img src="./RES/flag.png" alt="" />
+          <h6>Leader in 13 countries</h6>
+          <p>
+            Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia,
+            Czech Republic, Portugal, Argentina, Peru and Chile
+          </p>
+        </div>
+        <div class="patients">
+          <img src="./RES/patients.png" alt="" />
+          <h6>90,000,000 patients</h6>
+          <p>visit our websites each month</p>
+        </div>
       </div>
-      <div class="patients">
-        <h6>90,000,000 patients</h6>
-        <p>visit our websites each month</p>
-      </div>
-      <div class="doctors">
-        <img src="./RES/doctors.png" alt="" />
-        <h6>210,000 active doctors</h6>
-        <p>trust our solutions</p>
+      <div class="fourth_sectionTwoTiles2">
+        <div class="appointments">
+          <img src="./RES/visits.png" alt="" />
+          <h6>15,000,000 appointments</h6>
+          <p>booked last month</p>
+        </div>
+        <div class="doctors">
+          <img src="./RES/doctors.png" alt="" />
+          <h6>210,000 active doctors</h6>
+          <p>trust our solutions</p>
+        </div>
       </div>
     </section>
     <section class="fifth_section">
@@ -148,9 +155,84 @@
       <p>Mexico City and Curitiba, our search for great talent never stops.</p>
     </section>
     <section class="sixth_section">
-      <div class="locations">
-        <div class="location.tiles"></div>
+      <div class="Warsaw">
+        <img src="./RES/warsaw.png" alt="" />
+        <div class="button_container">
+          <p>Warsaw</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Barcelona">
+        <img src="./RES/barcelona.png" alt="" />
+        <div class="button_container">
+          <p>Barcelona</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Munich">
+        <img src="./RES/munich.png" alt="" />
+        <div class="button_container">
+          <p>Munich</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Istanbul">
+        <img src="./RES/istanbul.png" alt="" />
+        <div class="button_container">
+          <p>Istanbul</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Rome">
+        <img src="./RES/rome.png" alt="" />
+        <div class="button_container">
+          <p>Rome</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Bologna">
+        <img src="./RES/bologna.png" alt="" />
+        <div class="button_container">
+          <p>Bologna</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Curitiba">
+        <img src="./RES/curitiba.png" alt="" />
+        <div class="button_container">
+          <p>Curitiba</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Rio De Janeiro">
+        <img src="./RES/rio-janeiro.png" alt="" />
+        <div class="button_container">
+          <p>Rio De Janeiro</p>
+          <button>SEE OPENINGS</button>
+        </div>
+      </div>
+      <div class="Mexico City">
+        <img src="./RES/mexico-city.png" alt="" />
+        <div class="button_container">
+          <p>Mexico City</p>
+          <button>SEE OPENINGS</button>
+        </div>
       </div>
     </section>
+    <footer>
+      <h6>Sounds interesting? Join us now!</h6>
+      <button>SEE ALL CURRENT OPENINGS</button>
+      <p>
+        We are leaders in 13 countries: <a href="">Poland </a>, <a href="">Turkey</a> , <a href="">Spain</a> , <a href="">Italy</a> , <a href="">Germany</a>
+        , <a href="">Czech Republic</a> , <a href="">Portugal</a> , <a href="">Mexico</a> , <a href="">Colombia</a> , <a href="">Brazil</a> , <a href="">Argentina</a> ,
+        <a href="">Peru</a> and <a href="">Chile</a>.
+      </p>
+      <p>
+        This site uses cookies to deliver services in accordance with this
+        Privacy Policy. You can specify the conditions for storing or accessing
+        cookies on your browser.
+      </p>
+      <p>www.docplanner.com © 2023</p>
+    </footer>
   </body>
 </html>
